# ghrah-core

./: .env.example  .gitignore  README.md  README_zh.md  build.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  ability-system.md  ability-system_en.md  architecture.md  architecture_en.md  builtin-abilities.md  builtin-abilities_en.md  chat-module.md  chat-module_en.md  configuration.md  configuration_en.md  context-management.md  context-management_en.md  core-concepts.md  core-concepts_en.md  distributed-mode.md  distributed-mode_en.md  error-handling.md  error-handling_en.md  getting-started.md  getting-started_en.md  hitl.md  hitl_en.md  hook-mechanism.md  hook-mechanism_en.md  multi-agent.md  multi-agent_en.md  persistence.md  persistence_en.md
examples/: multi_agent.py  multi_agent_parallel.py  simple_chat.py  tool_agent.py  worker_pool.py
examples/ability_manifests/: example.math.calculate.yaml  example.net.http_request.yaml  example.text.json_extract.yaml
examples/agents_manifest/: run.py  runner.py
examples/student_grade_system/: run.py  runner.py
src/ghrah/: __init__.py
tests/: _helpers.py  conftest.py
tests/abilities/: test_abilities.py  test_ability_executor.py  test_ability_registry.py  test_builtin_abilities.py  test_cluster_abilities.py  test_command_safety.py  test_context.py  test_execute_command.py  test_fs_abilities.py  test_fs_permissions.py  test_hooks.py  test_path_utils.py  test_remote_ability_executor.py
tests/agents/: test_agent_loop.py
tests/chat/: __init__.py  test_content.py  test_format_anthropic.py  (+5 more)
(+146 files in other folders)
