[project]
name = "ghrah-core"
version = "0.1.0"
description = " General Distributed Agent Cluster Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "agentconf>=0.1.0",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.34.0",
    "ghrah-protocol>=0.1.0",
    "pydantic>=2.0",
]
authors = [
  {name = "chenxya", email = "chenxya@ghrah.org"}
]
license = "Apache-2.0"
license-files = ["LICENSES/*"]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.9",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghrah"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
